# X-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  Dockerfile  FIX_REPORT.md  FIX_REPORT_2.md  FIX_REPORT_3.md  README.md  all_logs.txt  debug_prompt_size.py  docker-compose.yml  dump_prompt_context.py  prompt_dump.md  pyproject.toml  test_jina.py  test_prompt_modes.py  verify_phase2.py
.agent/rules/: project.md  python.md
.agent/skills/: skill-manager
.sisyphus/: boulder.json
.sisyphus/plans/: ai-native-simplification.md
.tmp/external-context/: .manifest.json
config/: AGENTS.md  deployment_targets.yaml  memory.example.json  memory.json  models.example.json
deploy/searxng/: docker-compose.yml
docs/: AI_NATIVE_REFACTOR_PLAN.md  dingtalk_integration_plan.md  manager_software_delivery_plan.md  manager_worker_final_split_plan.md  pi_core_refactor_plan.md  project-overview.md  web_search_config.md
docs/plans/: 2026-03-01-accounting-full.md  2026-03-01-accounting-phase2.md  2026-03-01-accounting-pwa-integration-design.md  task.md
docs/plans-0306/: implementation_plan.md  task.md
docs/plans-0307/: task.md
docs/specs/: 2026-03-30-article-publisher-stages-design.md
extension/: __init__.py
extension/channels/: __init__.py  common.py  registry.py
extension/memories/: __init__.py  file_memory.py  mem0_memory.py  registry.py
extension/plugins/: __init__.py  core_commands.py  edge_tts.py  registry.py
extension/skills/: __init__.py  registry.py  runtime_context.py
scripts/: RCLONE_SETUP.md  SERVICE_TOOL_SYMLINKS.md  add_triggers_to_skills.py  backup.sh  build_web.ps1  build_web.sh  convert_builtin_skills.py  deploy_api_compose.sh  deploy_mediamtx.sh  deploy_wizard.ps1  deploy_wizard.sh  deploy_wizard_macos.sh  install_launchd_service.sh  install_systemd_service.sh  install_windows_task.ps1  list_accounts.py  run_api.ps1  run_api.sh  run_ikaros.ps1  run_ikaros.sh  run_manager.sh  translate_skill_descriptions.py
skills/builtin/: AGENTS.md  docker_ops.py  download_video.py  generate_image.py  monitor_keyword.py  reminder.py  rss_subscribe.py  searxng_search.py  skill_manager.py  stock_watch.py
skills/builtin_backup/: deployment_manager.py  download_video.py  notebooklm.py  translate_mode.py  web_browser.py
skills/learned/: weather.py  zlib_to_md.py
skills/pending/: download_video.py  weather_query.py
src/: ai_handler.py  config.py  database.py  document_handler.py  downloader.py  handlers.py  image_generator.py  intent_router.py  main.py  prompts.py  scheduler.py  stats.py  user_context.py  utils.py  verify_memory_mcp.py  verify_memory_store.py  voice_handler.py  web_summary.py  worker_main.py
src/agents/: __init__.py  skill_agent.py
src/api/: main.py
src/core/: AGENTS.md  __init__.py  accounting_store.py  agent_input.py  agent_orchestrator.py  audit_store.py  autonomic_router.py  background_delivery.py  channel_access.py  channel_runtime_store.py  channel_user_store.py  config.py  evolution_router.py  extension_base.py  extension_executor.py  extension_router.py  extension_runtime.py  file_artifacts.py  heartbeat_store.py  heartbeat_worker.py  kernel_config_store.py  kernel_memory.py  llm_usage_store.py  local_file_delivery.py  long_term_memory.py  markdown_memory_store.py  memory_config.py  model_config.py  orchestrator_context.py  orchestrator_event_handler.py  orchestrator_runtime_tools.py  primitive_runtime.py  proactive_delivery.py  prompt_composer.py  prompts.py  runtime_callbacks.py  runtime_config_store.py  scheduler.py  session_task_store.py  skill_arg_planner.py  (+28 more)
src/handlers/: __init__.py  accounting_handlers.py  admin_handlers.py  ai_handlers.py  base_handlers.py  callback_handlers.py  chat_task_bridge.py  deployment_handlers.py  document_handler.py  feature_handlers.py  heartbeat_handlers.py  mcp_handlers.py  media_handlers.py  media_utils.py  message_utils.py  model_handlers.py  reminder_handlers.py  service_handlers.py  skill_handlers.py  start_handlers.py  stock_handlers.py  subscription_handlers.py  task_handlers.py  usage_handlers.py  voice_handler.py  worker_handlers.py
src/mcp_client/: __init__.py  base.py  manager.py  memory.py  playwright.py  tools_bridge.py
src/repositories/: __init__.py  account_repo.py  allowed_users_repo.py  base.py  cache_repo.py  chat_repo.py  reminder_repo.py  subscription_repo.py  task_repo.py  user_settings_repo.py  user_stats_repo.py  watchlist_repo.py
src/services/: ai_service.py  container_service.py  deployment_service.py  download_service.py  image_input_service.py  intent_router.py  md_converter.py  openai_adapter.py  sandbox_executor.py  session_compaction_service.py  skill_creator.py  skill_executor.py  skill_registry_service.py  stock_service.py  storage_service.py  tts_service.py  web_summary_service.py
src/skills/: __init__.py
src/web_channel/: __init__.py  store.py
src/worker/: program_api.py
src/worker_runtime/: daemon.py  result_relay.py  task_file_store.py
tests/: conftest.py  test_media_handlers_cross_platform.py  test_openai_adapter_audio.py  test_platform_media_support.py  test_pyproject_dependency_groups.py  test_repositories.py  test_services.py  test_voice_handler.py  verify_db_schema.py  verify_stock_refactor.py
tests/core/: AGENTS.md  test_accounting_account_merge.py  test_agents_init.py  test_ai_handlers_dispatch.py  test_ai_service_loop_guard.py  test_ai_service_retry_loop.py  test_article_publisher_contract.py  test_article_publisher_multi_wechat.py  test_article_publisher_public_facing.py  test_article_publisher_skill.py  test_article_publisher_stage_regressions.py  test_audit_store.py  test_background_delivery.py  test_camera_services.py  test_command_subcommands.py  test_core_agent_program.py  test_core_module_usage.py  test_credential_manager_store.py  test_daily_query_execute.py  test_deep_research_execute.py  test_delivery_store.py  test_deployment_manager_auto_deploy.py  test_dev_tools.py  test_dispatch_tools.py  test_download_video_skill_delivery.py  (+67 more)
tmp/: ai_news_may9_article.md  article_pub_closure.txt
(+355 files in other folders)
