[project]
name = "x-bot"
version = "0.2.1"
description = "A powerful AI Telegram Bot for video downloading and multi-modal analysis."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "yt-dlp>=2024.0.0",
    "google-genai>=1.0.0",
    "googlenewsdecoder>=0.1.5",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "aiosqlite>=0.20.0",
    "python-dateutil>=2.8.0",
    "feedparser>=6.0.0",
    "mcp>=1.0.0",
    "aiofiles>=23.0.0",
    # Standard Skill Protocol dependencies
    "pyyaml>=6.0.0",
    "pypdf>=4.0.0",
    "reportlab>=4.0.0",
    "pdfplumber>=0.10.0",
    # Sandbox execution
    "RestrictedPython>=7.0",
    # Data Science Pack (for Skills)
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "yfinance>=0.2.36",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    # Browser Automation (NotebookLM)
    "patchright>=1.0.0",
    "notebooklm-py[browser]>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
